--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 version: "3.7"
+
 services:
   web:
     build: app
@@ -6,9 +7,14 @@ services:
       - '80:80'
     volumes:
       - ./app:/var/www/html
+    depends_on:
+      - db
   db:
     image: mysql
+    command: '--default-authentication-plugin=mysql_native_password'
     restart: always
     ports:
-      - '3306:3306'
-
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: '${ROOT_PASS}'
+      MYSQL_DATABASE: '${DB}'
